2014-02-26 : Editing title in course context is now updated in Turnitin.
2014-02-26 : Submit nothing link removed if submission has been made to Moodle but not yet processed by Turnitin
2014-02-26 : Troubleshooting documentation expanded.
2014-02-26 : Bug fixed with part dates in inbox when editing where timezone was not being accounted for.
2014-02-26 : Generic CSS issues that were breaking some user’s themes fixed.
2014-02-26 : Bug with updating of OR scores in Plagiarism Plugin depending on OR submissions capability fixed.
2014-02-26 : Cut off date / late submission issues solved in Plagiarism Plugin (Thanks to Chris Wharton).
2014-02-26 : Vietnamese Language pack added.
2014-02-26 : Option to send draft submissions to Turnitin in Plagiarism Plugin reinstated.
2014-02-26 : Diagnostic mode reinstated to disable logging by default.
2014-02-26 : Student who’d never submitted could not view rubric, they’re now enrolled at this point.
2014-02-26 : Instructor now being enrolled in course when resetting to prevent errors in reading memberships.
2014-02-26 : OR Link was being shown in Plagiarism Plugin for non OR submissions.
2014-02-26 : Submissions now processed in Plagiarism Plugin if due date disabled.
2014-02-26 : Rubric List was not being populated in Plagiarism Plugin settings.
2014-01-24 : Removed file type limit for file upload
2014-01-24 : Ability to accept no file added so that grades can be allocated to non file submissions 
2014-01-24 : Dependencies added to plagiarism plugin and blocks
2014-01-24 : Bug fixed in course reset when recreating new assignment 