@@ -1,3 +1,4 @@
+2014-02-26 : Incorrect grade scale calculation.
 2014-02-26 : Editing title in course context is now updated in Turnitin.
 2014-02-26 : Submit nothing link removed if submission has been made to Moodle but not yet processed by Turnitin
 2014-02-26 : Troubleshooting documentation expanded.
